Integrating the container-bindings module into the main build.