@@ -2,50 +2,27 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>org.picketlink</groupId>
-		<artifactId>picketlink-fed-parent</artifactId>
-		<version>2.1.7-SNAPSHOT</version>
-		<relativePath>../../parent</relativePath>
+		<artifactId>picketlink-bindings-parent</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>picketlink-jbas5-single</artifactId>
 	<packaging>jar</packaging>
-	<name>PicketLink Federation Server Bindings for JBoss5/6</name>
-	<url>http://labs.jboss.org/portal/picketlink/</url>
-	<description>PicketLink contains the foundation for Federated Identity Needs.</description>
-	<licenses>
-		<license>
-			<name>lgpl</name>
-			<url>http://repository.jboss.com/licenses/lgpl.txt</url>
-		</license>
-	</licenses>
-	<organization>
-		<name>JBoss Inc.</name>
-		<url>http://www.jboss.org</url>
-	</organization>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<printSummary>true</printSummary>
-					<disableXmlReport>false</disableXmlReport>
-					<testFailureIgnore>false</testFailureIgnore>
-					<includes>
-						<include>**/**TestCase.java</include>
-					</includes>
-					<forkMode>pertest</forkMode>
-					<argLine>-Djava.endorsed.dirs=${basedir}/src/test/resources/endorsed</argLine>
-					<useFile>false</useFile>
-					<trimStackTrace>false</trimStackTrace>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
+	<name>PicketLink Server Bindings for JBoss5/6</name>
+	
+	<properties>
+		<jboss-security-spi.version>2.0.4</jboss-security-spi.version>
+		<jbosssx.version>2.0.4</jbosssx.version>
+		<jboss-as-security.version>6.0.0.Final</jboss-as-security.version>
+		<jboss-aop.version>2.1.6.GA</jboss-aop.version>
+		<trove.version>1.0.2</trove.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.picketlink</groupId>
-			<artifactId>picketlink-core</artifactId>
+			<artifactId>picketlink-federation</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -56,19 +33,17 @@
 		<dependency>
 			<groupId>org.jboss.security</groupId>
 			<artifactId>jboss-security-spi</artifactId>
-			<version>2.0.4</version>
-			<scope>compile</scope>
+			<version>${jboss-security-spi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.security</groupId>
 			<artifactId>jbosssx</artifactId>
-			<version>2.0.4</version>
-			<scope>compile</scope>
+			<version>${jbosssx.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.jbossas</groupId>
 			<artifactId>jboss-as-security</artifactId>
-			<version>6.0.0.Final</version>
+			<version>${jboss-as-security.version}</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -80,7 +55,7 @@
 		<dependency>
 			<groupId>org.jboss.aop</groupId>
 			<artifactId>jboss-aop</artifactId>
-			<version>2.1.6.GA</version>
+			<version>${jboss-aop.version}</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -92,7 +67,7 @@
 		<dependency>
 			<groupId>trove</groupId>
 			<artifactId>trove</artifactId>
-			<version>1.0.2</version>
+			<version>${trove.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -101,39 +76,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<doclet>org.jboss.apiviz.APIviz</doclet>
-					<docletArtifact>
-						<groupId>org.jboss.apiviz</groupId>
-						<artifactId>apiviz</artifactId>
-						<version>1.2.5.GA</version>
-					</docletArtifact>
-					<additionalparam>
-						-charset UTF-8
-						-docencoding UTF-8
-						-version
-						-author
-						-breakiterator
-						-windowtitle "${project.name} ${project.version} API
-						Reference"
-						-doctitle "${project.name} ${project.version} API
-						Reference"
-						-bottom "Copyright © ${project.inceptionYear}-Present
-						${project.organization.name}. All Rights Reserved."
-						-link
-						http://java.sun.com/javase/6/docs/api/
-						-sourceclasspath
-						${project.build.outputDirectory}
-					</additionalparam>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
 </project>
