@@ -4,49 +4,25 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>org.picketlink</groupId>
-		<artifactId>picketlink-fed-parent</artifactId>
-		<version>2.1.7-SNAPSHOT</version>
-		<relativePath>../../parent</relativePath>
+		<artifactId>picketlink-bindings-parent</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>picketlink-jbas7-single</artifactId>
 	<packaging>jar</packaging>
-	<name>PicketLink Federation Server Bindings for JBoss AS7.x</name>
-	<url>http://labs.jboss.org/portal/picketlink/</url>
-	<description>PicketLink contains the foundation for Federated Identity Needs.</description>
-	<licenses>
-		<license>
-			<name>lgpl</name>
-			<url>http://repository.jboss.com/licenses/lgpl.txt</url>
-		</license>
-	</licenses>
-	<organization>
-		<name>JBoss Inc.</name>
-		<url>http://www.jboss.org</url>
-	</organization>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<printSummary>true</printSummary>
-					<disableXmlReport>false</disableXmlReport>
-					<testFailureIgnore>false</testFailureIgnore>
-					<includes>
-						<include>**/**TestCase.java</include>
-					</includes>
-					<forkMode>pertest</forkMode>
-					<argLine>-Djava.endorsed.dirs=${basedir}/src/test/resources/endorsed</argLine>
-					<useFile>false</useFile>
-					<trimStackTrace>false</trimStackTrace>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<name>PicketLink Server Bindings for JBoss AS7.x</name>
+	
+	<properties>
+		<picketbox.version>4.0.7.Final</picketbox.version>
+		<jbossweb.version>7.0.13.Final</jbossweb.version>
+		<cxf-api.version>2.4.6</cxf-api.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.picketlink</groupId>
-			<artifactId>picketlink-core</artifactId>
+			<artifactId>picketlink-federation</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -57,77 +33,34 @@
 		<dependency>
 			<groupId>org.picketbox</groupId>
 			<artifactId>picketbox</artifactId>
-			<version>4.0.7.Final</version>
+			<version>${picketbox.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.web</groupId>
 			<artifactId>jbossweb</artifactId>
-			<version>7.0.13.Final</version>
+			<version>${jbossweb.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-api</artifactId>
-			<version>2.4.6</version>
+			<version>${cxf-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
-			<version>3.1.0.GA</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging-processor</artifactId>
-			<!-- This is a compile-time dependency of this project, but is not needed 
-				at compile or runtime by other projects that depend on this project. -->
 			<scope>provided</scope>
-			<optional>true</optional>
-			<version>1.0.0.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>provided</scope>
-			<version>4.8.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.ws</groupId>
-			<artifactId>jbossws-spi</artifactId>
-			<version>2.0.3.GA</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.ws</groupId>
-			<artifactId>jbossws-api</artifactId>
-			<version>1.0.0.GA</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<doclet>org.jboss.apiviz.APIviz</doclet>
-					<docletArtifact>
-						<groupId>org.jboss.apiviz</groupId>
-						<artifactId>apiviz</artifactId>
-						<version>1.2.5.GA</version>
-					</docletArtifact>
-					<additionalparam> -charset UTF-8 -docencoding UTF-8 -version
-						-author -breakiterator -windowtitle "${project.name}
-						${project.version} API Reference" -doctitle "${project.name}
-						${project.version} API Reference" -bottom "Copyright ©
-						${project.inceptionYear}-Present ${project.organization.name}. All
-						Rights Reserved." -link http://java.sun.com/javase/6/docs/api/
-						-sourceclasspath ${project.build.outputDirectory} 
-					</additionalparam>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
 </project>
